Initial working implementation

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -2,9 +2,9 @@
   <div class="intro">
     <h1>Cajón del azul</h1>
     <p>
-      Un proyecto pensado para saber si los muchachos estan jugando al lol. Y en
-      un futuro para ver cuál de todos le está metiendo mas. Hecho por la
-      persona mas antilol del planeta tierra (yo, Mauricio Lima)
+      Un proyecto pensado para saber si los muchachos estan jugando al Lol. Y en
+      un futuro para ver cuál de todos le está metiendo más. Hecho por la
+      persona más antilol del planeta tierra (yo, Mauricio Lima)
     </p>
   </div>
   <app-loleros-table></app-loleros-table>
