--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -1,7 +1,11 @@
 .main-container {
   padding: 3em;
-};
+}
 
 .intro {
-  padding-bottom: 2em;
+  margin-bottom: 2em;
+  background: #ccc;
+  border-radius: 5px;
+  padding: 1em;
+  box-sizing: border-box;
 }
