--- a/src/app/components/loleros-table/loleros-table.component.html
+++ b/src/app/components/loleros-table/loleros-table.component.html
@@ -11,11 +11,11 @@ class="mat-elevation-z8">
 </ng-container>
 
 <!-- usernames Column -->
-<ng-container matColumnDef="usernames">
+<ng-container matColumnDef="username">
 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by usernames (no se q hara esto)">
   Usernames
 </th>
-<td mat-cell *matCellDef="let element"> {{element.usernames.join(', ')}} </td>
+<td mat-cell *matCellDef="let element"> {{element.username}} </td>
 </ng-container>
 
 <!-- status Column -->
@@ -23,7 +23,7 @@ class="mat-elevation-z8">
 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by status">
   Status
 </th>
-<td mat-cell *matCellDef="let element"> {{element.gameStatus}} </td>
+<td mat-cell *matCellDef="let element" [ngClass]="{'isLoleando': element.gameStatus.includes('💀')}"> {{element.gameStatus}} </td>
 </ng-container>
 
 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
