--- a/src/app/components/loleros-table/loleros-table.component.scss
+++ b/src/app/components/loleros-table/loleros-table.component.scss
@@ -18,6 +18,12 @@ th {
 td {
   background: #ccc;
   color: black;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+  p {
+    padding: 0.5em;
+    margin: 0;
+  }
 }
 
 .isLoleando {
