--- a/src/app/components/loleros-table/loleros-table.component.html
+++ b/src/app/components/loleros-table/loleros-table.component.html
@@ -1,59 +1,61 @@
-<table
-  mat-table
-  [dataSource]="dataSource"
-  matSort
-  (matSortChange)="announceSortChange($event)"
-  class="mat-elevation-z8"
->
-  <!-- name Column -->
-  <ng-container matColumnDef="name">
-    <th
-      mat-header-cell
-      *matHeaderCellDef
-      mat-sort-header
-      sortActionDescription="Sort by name"
-    >
-      Name.
-    </th>
-    <td mat-cell *matCellDef="let element">
-      <p>{{ element.name }}</p>
-    </td>
-  </ng-container>
+<div class="table-container">
+  <table
+    mat-table
+    [dataSource]="dataSource"
+    matSort
+    (matSortChange)="announceSortChange($event)"
+    class="mat-elevation-z8"
+  >
+    <!-- name Column -->
+    <ng-container matColumnDef="name">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by name"
+      >
+        Name.
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <p>{{ element.name }}</p>
+      </td>
+    </ng-container>
 
-  <!-- usernames Column -->
-  <ng-container matColumnDef="username">
-    <th
-      mat-header-cell
-      *matHeaderCellDef
-      mat-sort-header
-      sortActionDescription="Sort by usernames (no se q hara esto)"
-    >
-      Usernames
-    </th>
-    <td mat-cell *matCellDef="let element">
-      <p>{{ element.username }}</p>
-    </td>
-  </ng-container>
+    <!-- usernames Column -->
+    <ng-container matColumnDef="username">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by usernames (no se q hara esto)"
+      >
+        Usernames
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <p>{{ element.username }}</p>
+      </td>
+    </ng-container>
 
-  <!-- status Column -->
-  <ng-container matColumnDef="status">
-    <th
-      mat-header-cell
-      *matHeaderCellDef
-      mat-sort-header
-      sortActionDescription="Sort by status"
-    >
-      Status
-    </th>
-    <td
-      mat-cell
-      *matCellDef="let element"
-      [ngClass]="{ isLoleando: element.gameStatus.includes('💀') }"
-    >
-      <p>{{ element.gameStatus }}</p>
-    </td>
-  </ng-container>
+    <!-- status Column -->
+    <ng-container matColumnDef="status">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by status"
+      >
+        Status
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let element"
+        [ngClass]="{ isLoleando: element.gameStatus.includes('💀') }"
+      >
+        <p>{{ element.gameStatus }}</p>
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
